+ Add Captures + Start support of hidden foursquare API + Refactor parser design. + Implement basic parsing of a few types.
committer: Joe LaPenna <joe@joelapenna.com>

--- a/captures/checkin_post.html
+++ b/captures/checkin_post.html
@@ -1,68 +1,4 @@
-<!--<user><id>9711</id><firstname>Testuser</firstname><lastname>Lapenna</lastname><cityshortname>SF</cityshortname><cityid>23</cityid><gender>male</gender><sendtwitter>false</sendtwitter><checkin><checkinid></checkinid><venueid></venueid><aliasid></aliasid><venuename></venuename><address></address><crossstreet></crossstreet><shout></shout><geolat></geolat><geolong></geolong><xdatetime></xdatetime><relative_time>0 seconds ago</relative_time></checkin><badges><badge><name>Newbie</name><icon>default_off.png</icon><description></description></badge><badge><name>Adventurer</name><icon>default_off.png</icon><description></description></badge><badge><name>Explorer</name><icon>default_off.png</icon><description></description></badge><badge><name>Superstar</name><icon>default_off.png</icon><description></description></badge><badge><name>Bender</name><icon>default_off.png</icon><description></description></badge><badge><name>Crunked</name><icon>default_off.png</icon><description></description></badge><badge><name>Local</name><icon>default_off.png</icon><description></description></badge><badge><name>Super User</name><icon>default_off.png</icon><description></description></badge><badge><name>Player Please!</name><icon>default_off.png</icon><description></description></badge><badge><name>School Night</name><icon>default_off.png</icon><description></description></badge><badge><name>Photogenic</name><icon>default_off.png</icon><description></description></badge><badge><name>Socialite</name><icon>default_off.png</icon><description></description></badge></badges></user><checkincomplete><message>OK! We&apos;ve got you @ Noc Noc.</message><url><![CDATA[<style>
-.text
-{
-  font-size : 15px;
-  font-family : Helvetica;
-  color : #000000;
-  line-height: 13pt;
-}
-
-.text_mini
-{
-  font-size : 13px;
-  font-family : Helvetica;
-  color : #000000;
-  line-height: 13pt;
-}
-
-#rounded{
-	line-height: 1.2;
-
-	-moz-border-radius-topleft: 5px;
-	-webkit-border-top-left-radius: 5px;
-	-moz-border-radius-bottomleft: 5px;
-	-webkit-border-bottom-left-radius: 5px;
-
-	-moz-border-radius-topright: 5px;
-	-webkit-border-top-right-radius: 5px;
-	-moz-border-radius-bottomright: 5px;
-	-webkit-border-bottom-right-radius: 5px;
-}
-</style>
-<table id="rounded" cellpadding="5" cellspacing="0" border="1" bordercolor="#ffcc66" bgcolor="#ffffcc" width="100%" class="text">
-<tr>
-<td valign="top"><img align="left" src="/images/badges/newbie_on.png" width="57" height="57"></td><td><b>You've unlocked "Newbie!"</b> Congrats on your first check-in!</td>
-</tr>
-</table>
-<img src="/images/spacer.png" width=30 height=10><table cellpadding="2" cellspacing="0" border="0" width="100%" class="text">
-<tr>
-	<td colspan=2><b>Your check-in score:</b></td>
-</tr>
-<tr>
-	<td width=20 valign="top"><img width=20 height=20 src="/images/scoring/1.png"></td>
-	<td>First time @ Noc Noc! (+5)</td>
-</tr>
-<tr>
-	<td width=20 valign="top"><img width=20 height=20 src="/images/scoring/2.png"></td>
-	<td>First stop tonight (+1)</td>
-</tr>
-<tr>
-	<td width=20 valign="top"><img width=20 height=20 src="/images/scoring/4.png"></td>
-	<td>First night out in a few days! (+1)</td>
-</tr>
-<tr>
-	<td width=20>&nbsp;</td>
-	<td><b>Total: 7 pts </b></td>
-</tr>
-</table>
-<img src="/images/spacer.png" width=30 height=10><table id="rounded" cellpadding="8" cellspacing="0" border="1" bordercolor="#CCCCCC" bgcolor="#EEEEEE" width="100%" class="text">
-<tr>
-<td valign="top"><img width=30 height=30 src="http://playfoursquare.com/userpix/4983_1237413349.jpg"></td><td valign="top">Paul P. is the mayor of Noc Noc.</td></tr>
-</table>
-<img src="/images/spacer.png" width=30 height=10>
-
-
-]]></url><alert><msg>Congrats in your first checkin!  As you&apos;ll see, every check-in earns you points and certain combinations of checkins will unlock badges.  The more you explore, the more you unlock.  Get to it!</msg></alert></checkincomplete>--><html>
+<!--<user><id>9711</id><firstname>Testuser</firstname><lastname>Lapenna</lastname><cityshortname>SF</cityshortname><cityid>23</cityid><gender>male</gender><sendtwitter>false</sendtwitter><checkin><checkinid>67628</checkinid><venueid></venueid><aliasid>142725</aliasid><venuename>Bobbys place</venuename><address></address><crossstreet></crossstreet><shout></shout><geolat></geolat><geolong></geolong><xdatetime>2009-04-06 19:53:47</xdatetime><relative_time>25 mins ago</relative_time></checkin><badges><badge><name>Newbie</name><icon>newbie_on.png</icon><description>Congrats on your first check-in!</description></badge><badge><name>Adventurer</name><icon>default_off.png</icon><description></description></badge><badge><name>Explorer</name><icon>default_off.png</icon><description></description></badge><badge><name>Superstar</name><icon>default_off.png</icon><description></description></badge><badge><name>Bender</name><icon>default_off.png</icon><description></description></badge><badge><name>Crunked</name><icon>default_off.png</icon><description></description></badge><badge><name>Local</name><icon>default_off.png</icon><description></description></badge><badge><name>Super User</name><icon>default_off.png</icon><description></description></badge><badge><name>Player Please!</name><icon>default_off.png</icon><description></description></badge><badge><name>School Night</name><icon>default_off.png</icon><description></description></badge><badge><name>Photogenic</name><icon>default_off.png</icon><description></description></badge><badge><name>Socialite</name><icon>default_off.png</icon><description></description></badge></badges></user><checkin/>--><html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=320">
@@ -72,71 +8,11 @@
 </head>
 <body>
 <a href="/"><img src="/images/header_mobile_web.png" width="168" height="48" border="0"></a><br><a href="/"><b>foursquare</b></a> (Testuser in SF)<hr>
-<b>OK! We've got you @ Noc Noc.</b><br><br><table id="rounded" cellpadding="8" cellspacing="0" border="1" bordercolor="#CCCCCC" bgcolor="#EEEEEE" width="100%" class="text"><tr><td>Congrats in your first checkin!  As you'll see, every check-in earns you points and certain combinations of checkins will unlock badges.  The more you explore, the more you unlock.  Get to it!</td></tr></table>
-<br><br><style>
-.text
-{
-  font-size : 15px;
-  font-family : Helvetica;
-  color : #000000;
-  line-height: 13pt;
-}
-
-.text_mini
-{
-  font-size : 13px;
-  font-family : Helvetica;
-  color : #000000;
-  line-height: 13pt;
-}
-
-#rounded{
-	line-height: 1.2;
-
-	-moz-border-radius-topleft: 5px;
-	-webkit-border-top-left-radius: 5px;
-	-moz-border-radius-bottomleft: 5px;
-	-webkit-border-bottom-left-radius: 5px;
-
-	-moz-border-radius-topright: 5px;
-	-webkit-border-top-right-radius: 5px;
-	-moz-border-radius-bottomright: 5px;
-	-webkit-border-bottom-right-radius: 5px;
-}
-</style>
-<table id="rounded" cellpadding="5" cellspacing="0" border="1" bordercolor="#ffcc66" bgcolor="#ffffcc" width="100%" class="text">
-<tr>
-<td valign="top"><img align="left" src="/images/badges/newbie_on.png" width="57" height="57"></td><td><b>You've unlocked "Newbie!"</b> Congrats on your first check-in!</td>
-</tr>
-</table>
-<img src="/images/spacer.png" width=30 height=10><table cellpadding="2" cellspacing="0" border="0" width="100%" class="text">
-<tr>
-	<td colspan=2><b>Your check-in score:</b></td>
-</tr>
-<tr>
-	<td width=20 valign="top"><img width=20 height=20 src="/images/scoring/1.png"></td>
-	<td>First time @ Noc Noc! (+5)</td>
-</tr>
-<tr>
-	<td width=20 valign="top"><img width=20 height=20 src="/images/scoring/2.png"></td>
-	<td>First stop tonight (+1)</td>
-</tr>
-<tr>
-	<td width=20 valign="top"><img width=20 height=20 src="/images/scoring/4.png"></td>
-	<td>First night out in a few days! (+1)</td>
-</tr>
-<tr>
-	<td width=20>&nbsp;</td>
-	<td><b>Total: 7 pts </b></td>
-</tr>
-</table>
-<img src="/images/spacer.png" width=30 height=10><table id="rounded" cellpadding="8" cellspacing="0" border="1" bordercolor="#CCCCCC" bgcolor="#EEEEEE" width="100%" class="text">
-<tr>
-<td valign="top"><img width=30 height=30 src="http://playfoursquare.com/userpix/4983_1237413349.jpg"></td><td valign="top">Paul P. is the mayor of Noc Noc.</td></tr>
-</table>
-<img src="/images/spacer.png" width=30 height=10>
-
-
+<form action="/checkin" method="post" style="display:inline">
+<input type="hidden" name="security_token" value=""><b>Check-in:</b><br><b>@</b> <input type="text" name="venue" size="15" value=""><br><br><b>Add a shout</b> (optional)<b>:</b><br><b>!</b> <input type="text" name="shout" size="15"><input type="submit" value="go!"><br><br><select name="privacy"><option value="0" selected>Show this checkin to friends</option>
+<option value="1">Hide my location</option></select><br><br><select name="twitter"><option value="1">Send this to Twitter</option>
+<option value="0" selected>Don't send to Twitter</option></select>
+</form>
 <hr>
 <div>1. <a accesskey="1" href="/checkins">Find your friends</a>
 </div>
