Added category icons to user history list, will replace shout icon with smaller version when available.

--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -44,6 +44,7 @@
       <li>History times are now formatted.</li>
       <li>Choose startup tab (Friends or Places) through the preferences page.</li>
       <li>Friends checkin tab is sorted by distance and checkin times.</li>
+      <li>Added category icons for user history list.</li>
     </ul>
     
     <h4><span>v2010-03-12</span></h4>
