--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -37,6 +37,12 @@
   
   <body>
   
+    <h4><span>What's new in v2010-03-30?</span></h4>
+    <ul>
+      <li>Clicking on mayor photo in post check-in screen shows user details.</li>
+      <li>Updated distance sorting of venue searches.</li>
+    </ul>
+    
     <h4><span>What's new in v2010-03-23?</span></h4>
     <ul>
       <li>This "What's New" page.</li>
