--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -39,6 +39,8 @@
   
     <h4><span>What's new in v2010-03-30?</span></h4>
     <ul>
+      <li>Added user photos to venue tips list.</li>
+      <li>Clicking a tip from a venue page displays a new list of options.</li>
       <li>Clicking on a nearby special shows venue details for that venue.</li>
       <li>Clicking on mayor photo in post check-in screen shows user details.</li>
       <li>Updated distance sorting of venue searches.</li>
