--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -37,16 +37,16 @@
   
   <body>
   
-    <h4><span>What's new in v2010-03-30?</span></h4>
+    <h4><span>What's new in v2010-03-26?</span></h4>
     <ul>
       <li>Added user photos to venue tips list.</li>
-      <li>Clicking a tip from a venue page displays a new list of options.</li>
-      <li>Clicking on a nearby special shows venue details for that venue.</li>
-      <li>Clicking on mayor photo in post check-in screen shows user details.</li>
+      <li>Clicking a tip from a venue page displays a new list of options (listing your to-do/completed tips will be added in a future version).</li>
+      <li>Clicking on a nearby special shows venue details for that venue on post-checkin screen.</li>
+      <li>Clicking on mayor photo in post-checkin screen shows user details.</li>
       <li>Updated distance sorting of venue searches.</li>
     </ul>
     
-    <h4><span>What's new in v2010-03-23?</span></h4>
+    <h4><span>v2010-03-23</span></h4>
     <ul>
       <li>This "What's New" page.</li>
       <li>View a user's mayorships through the user details page.</li>
