--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -37,7 +37,12 @@
   
   <body>
   
-    <h4><span>What's new in v2010-03-26?</span></h4>
+    <h4><span>What's new in v2010-03-28?</span></h4>
+    <ul>
+      <li>Updated checkin screen.</li>
+    </ul>
+    
+    <h4><span>v2010-03-26</span></h4>
     <ul>
       <li>Added user photos to venue tips list.</li>
       <li>Clicking a tip from a venue page displays a new list of options (listing your to-do/completed tips will be added in a future version).</li>
