--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -37,7 +37,17 @@
   
   <body>
   
-    <h4><span>What's new in v2010-03-28?</span></h4>
+    <h4><span>What's new in v2010-04-xx?</span></h4>
+    <ul>
+      <li>Menu added for Me page, makes it easier to get to the Friend Requests page.</li>
+    </ul>
+    
+    <h4><span>v2010-03-29</span></h4>
+    <ul>
+      <li>Update for timestamp formatting.</li>
+    </ul>
+    
+    <h4><span>v2010-03-28</span></h4>
     <ul>
       <li>Updated checkin screen.</li>
     </ul>
