--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -40,6 +40,7 @@
     <h4><span>What's new in v2010-04-xx?</span></h4>
     <ul>
       <li>Menu added for Me page, makes it easier to get to the Friend Requests page.</li>
+      <li>Fixed timestamp bug which would place some Droid users in the year 1910.</li>
     </ul>
     
     <h4><span>v2010-03-29</span></h4>
