--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -35,11 +35,15 @@
     </style>
   </head>
   
+  
   <body>
   
-    <h4><span>What's new in v2010-04-xx?</span></h4>
+    <h4><span>What's new in v2010-04-08?</span></h4>
     <ul>
+      <li>Added a native sign up screen from the login page.</li>
+      <li>Added a 'special' button to the venue page if the venue has a special available.</li>
       <li>Menu added for Me page, makes it easier to get to the Friend Requests page.</li>
+      <li>Made quick-check-in off by default instead of on. Users can change this in preferences page.</li>
       <li>Fixed timestamp bug which would place some Droid users in the year 1910.</li>
     </ul>
     
