Updated style of check-in button to be easier to hit and should be in line with the rest of the styles on the other platforms.

--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -40,6 +40,7 @@
   
     <h4><span>What's new in v2010-04-08?</span></h4>
     <ul>
+      <li>New check-in button on venue page.</li>
       <li>Added a native sign up screen from the login page.</li>
       <li>Added a 'special' button to the venue page if the venue has a special available.</li>
       <li>Menu added for Me page, makes it easier to get to the Friend Requests page.</li>
