--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -38,7 +38,13 @@
   
   <body>
   
-    <h4><span>What's new in v2010-04-09?</span></h4>
+    <h4><span>What's new in v2010-04-xx?</span></h4>
+    <ul>
+      <li>Updated application icon and menu icons.</li>
+      <li>Showing reverse geolocation footer on Places tab.</li>
+    </ul>
+    
+    <h4><span>v2010-04-09</span></h4>
     <ul>
       <li>New check-in button on venue page.</li>
       <li>Added a native sign up screen from the login page.</li>
