--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -40,6 +40,8 @@
   
     <h4><span>What's new in v2010-04-xx?</span></h4>
     <ul>
+      <li>Added option through preferences, user can choose to clear their current geo location before each venue search.
+          This may help users having issues with geolocation.</li>
       <li>Updated application icon and menu icons.</li>
       <li>Showing reverse geolocation footer on Places tab.</li>
     </ul>
