--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -38,7 +38,7 @@
   
   <body>
   
-    <h4><span>What's new in v2010-04-xx?</span></h4>
+    <h4><span>What's new in v2010-04-19?</span></h4>
     <ul>
       <li>Added option through preferences, user can choose to clear their current geo location before each venue search.
           This may help users having issues with geolocation.</li>
