--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -40,9 +40,9 @@
   
     <h4><span>What's new in v2010-04-19?</span></h4>
     <ul>
-      <li>Added option through preferences, user can choose to clear their current geo location before each venue search.
-          This may help users having issues with geolocation.</li>
-      <li>Updated application icon and menu icons.</li>
+      <li>Added a new option through preferences which allows user to clear their current geo location 
+          before each venue search. This may help users having issues with geolocation.</li>
+      <li>Updated application icon and menu icons for v6 and newer platforms.</li>
       <li>Showing reverse geolocation footer on Places tab.</li>
     </ul>
     
