--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -38,8 +38,9 @@
   
   <body>
   
-    <h4><span>What's new in v2010-04-19?</span></h4>
+    <h4><span>What's new in v2010-04-22?</span></h4>
     <ul>
+      <li>Default zoom level for venue map is closer to street level.</li>
       <li>Added a new option through preferences which allows user to clear their current geo location 
           before each venue search. This may help users having issues with geolocation.</li>
       <li>Updated application icon and menu icons for v6 and newer platforms.</li>
