--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -38,7 +38,15 @@
   
   <body>
   
-    <h4><span>What's new in v2010-04-23?</span></h4>
+    <h4><span>What's new in v2010-05-xx?</span></h4>
+    <ul>
+      <li>Added a button to the Friends tab when a user has no recent friend checkins. The button takes them
+          to the find friends activity to make it easier to link up with other foursquare users. </li>
+      <li>Updated default message for venue pages when there are no recent checkins. This was just to make it
+          clear that the venue page is only showing recent checkins, not a total checkin history. </li>
+    </ul>
+    
+    <h4><span>v2010-04-23</span></h4>
     <ul>
       <li>Default zoom level for venue map is closer to street level.</li>
       <li>Added a new option through preferences which allows user to clear their current geo location 
