--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -40,8 +40,8 @@
   
     <h4><span>What's new in v2010-05-xx?</span></h4>
     <ul>
-      <li>Added a button to the Friends tab when a user has no recent friend checkins. The button takes them
-          to the find friends activity to make it easier to link up with other foursquare users. </li>
+      <li>For no users, the Friends tab will now show a sad face and two buttons 'add friends' & 'friend requests'.
+          This should make it a little easier for new users to start adding friends. </li>
       <li>Updated default message for venue pages when there are no recent checkins. This was just to make it
           clear that the venue page is only showing recent checkins, not a total checkin history. </li>
     </ul>
