--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -40,7 +40,9 @@
   
     <h4><span>What's new in v2010-05-xx?</span></h4>
     <ul>
-      <li>For no users, the Friends tab will now show a sad face and two buttons 'add friends' & 'friend requests'.
+      <li>Friend invites page now has an option to generate a list of contacts not on foursquare for sending
+          email invites to join. This should make it easier to get friends playing. </li>
+      <li>For new users, the Friends tab will now show a sad face and two buttons 'add friends' & 'friend requests'.
           This should make it a little easier for new users to start adding friends. </li>
       <li>Updated default message for venue pages when there are no recent checkins. This was just to make it
           clear that the venue page is only showing recent checkins, not a total checkin history. </li>
