Upping version numbers for test build.

--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -38,14 +38,17 @@
   
   <body>
   
-    <h4><span>What's new in v2010-05-xx?</span></h4>
+    <h4><span>What's new in v2010-05-11?</span></h4>
     <ul>
       <li>Friend invites page now has an option to generate a list of contacts not on foursquare for sending
-          email invites to join. This should make it easier to get friends playing. </li>
+          email invites to join. This should make it easier to get friends playing along. </li>
       <li>For new users, the Friends tab will now show a sad face and two buttons 'add friends' & 'friend requests'.
           This should make it a little easier for new users to start adding friends. </li>
-      <li>Updated default message for venue pages when there are no recent checkins. This was just to make it
+      <li>Updated default message for venue pages when there are no recent checkins. This was done to make it
           clear that the venue page is only showing recent checkins, not a total checkin history. </li>
+      <li>Sorting nearby venues by popularity and distance instead of just distance, <a href="http://blog.foursquare.com/post/589698188/weve-just-made-the-places-screen-smarter">read here</a> 
+          for more info.</li>
+      <li>Updated to SDK level 6. </li>
     </ul>
     
     <h4><span>v2010-04-23</span></h4>
