--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -38,7 +38,13 @@
   
   <body>
   
-    <h4><span>What's new in v2010-05-11?</span></h4>
+    <h4><span>What's new in v2010-06-01?</span></h4>
+    <ul>
+      <li>Checkin notification support. A service will wake every N minutes (user-configurable) to check for
+          new checkins from friends. </li>
+    </ul>
+    
+    <h4><span>What's new in v2010-05-11</span></h4>
     <ul>
       <li>Friend invites page now has an option to generate a list of contacts not on foursquare for sending
           email invites to join. This should make it easier to get friends playing along. </li>
