Exposed 'add friend' action on most user details activity screens, should make it easier for users to add friends.

--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -40,6 +40,8 @@
   
     <h4><span>What's new in v2010-06-01?</span></h4>
     <ul>
+      <li>Now showing the 'add friend' option on user details screens, if not already friends. Should make it
+          easier to build your network. </li>
       <li>Checkin notification support. A service will wake every N minutes (user-configurable) to check for
           new checkins from friends. </li>
     </ul>
