--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -44,6 +44,7 @@
           easier to build your network. </li>
       <li>Checkin pings support. A service will wake every N minutes (user-configurable) to check for
           new checkins from friends. </li>
+      <li>Fixed bug for new users on 1.5. The empty friends screen would crash on some android 1.5 devices.</li> 
     </ul>
     
     <h4><span>What's new in v2010-05-11</span></h4>
