--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -38,12 +38,14 @@
   
   <body>
   
-    <h4><span>What's new in v2010-06-02?</span></h4>
+    <h4><span>What's new in v2010-06-03?</span></h4>
     <ul>
       <li>Now showing the 'add friend' option on user details screens, if not already friends. Should make it
           easier to build your network. </li>
       <li>Checkin pings support. A service will wake every N minutes (user-configurable) to check for
           new checkins from friends. </li>
+      <li>New item on user details pages named 'pings', allows you to turn pings on/off per user. Only applicable 
+          if you have enabled ping notifications for yourself. </li>
       <li>Fixed bug for new users on 1.5. The empty friends screen would crash on some android 1.5 devices.</li> 
     </ul>
     
