Updated changelog with Joe's changes.

--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -46,6 +46,7 @@
           new checkins from friends. </li>
       <li>New item on user details pages named 'pings', allows you to turn pings on/off per user. Only applicable 
           if you have enabled ping notifications for yourself. </li>
+      <li>Fix a widget bug that would cause "Application Not Responding" errors.</li>
       <li>Fixed bug for new users on 1.5. The empty friends screen would crash on some android 1.5 devices.</li> 
     </ul>
     
