--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -38,7 +38,15 @@
   
   <body>
   
-    <h4><span>What's new in v2010-06-07?</span></h4>
+    <h4><span>What's new in v2010-06-xx?</span></h4>
+    <ul>
+      <li>The venue activity has a new menu option called 'Edit Venue' which gives you the option to propose
+          venue edits. These include marking a venue as closed, duplicate, or mislocated. The last option 
+          allows you to update all venue information such as address, name, etc.</li> 
+      <li>Refresh menu item moved to first position in Places tab to be consistent with Friends tab.</li>
+    </ul>
+    
+    <h4><span>What's new in v2010-06-07</span></h4>
     <ul>
       <li>Now showing the 'add friend' option on user details screens, if not already friends. Should make it
           easier to build your network. </li>
