Using presence of twitter/facebook handle values in user to control whether checkboxes on checkin are prepopulated as true. We can now completely hide those checkboxes if we wish.

--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -44,7 +44,8 @@
           venue edits. These include marking a venue as closed, duplicate, or mislocated. The last option 
           allows you to update all venue information such as address, name, etc.</li> 
       <li>Refresh menu item moved to first position in Places tab to be consistent with Friends tab.</li>
-      <li>Fixed bug introduced in v2010-06-07 which was formatting the times of checkins incorrectly.</li>
+      <li>Fixed bug introduced in v2010-06-07 which was formatting the times of checkins incorrectly in 
+          the Friends tab.</li>
     </ul>
     
     <h4><span>What's new in v2010-06-07</span></h4>
