Updated changelog and upped version number.

--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -38,11 +38,14 @@
   
   <body>
   
-    <h4><span>What's new in v2010-06-xx?</span></h4>
+    <h4><span>What's new in v2010-06-14?</span></h4>
     <ul>
       <li>The venue activity has a new menu option called 'Edit Venue' which gives you the option to propose
           venue edits. These include marking a venue as closed, duplicate, or mislocated. The last option 
           allows you to update all venue information such as address, name, etc.</li> 
+      <li>Menu for Friends tab updated to have a 'more' item, which gives the option to sort friend checkins
+          by time or distance.</li>
+      <li>Add friends and find friends items added to 'more' item on Friends tab menu.
       <li>Refresh menu item moved to first position in Places tab to be consistent with Friends tab.</li>
       <li>Fixed bug introduced in v2010-06-07 which was formatting the times of checkins incorrectly in 
           the Friends tab.</li>
