--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -38,7 +38,13 @@
   
   <body>
   
-    <h4><span>What's new in v2010-06-16?</span></h4>
+    <h4><span>What's new in v2010-06-23?</span></h4>
+    <ul>
+      <li>Showing recent nearby friend checkins on a map. You can find this on the Friends tab,
+          menu -> more -> Map.</li>
+    </ul>
+  
+    <h4><span>What's new in v2010-06-16</span></h4>
     <ul>
       <li>The venue activity has a new menu option called 'Edit Venue' which gives you the option to propose
           venue edits. These include marking a venue as closed, duplicate, or mislocated. The last option 
