Updated version number and log.

--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -38,10 +38,11 @@
   
   <body>
   
-    <h4><span>What's new in v2010-06-23?</span></h4>
+    <h4><span>What's new in v2010-06-24?</span></h4>
     <ul>
       <li>Showing recent nearby friend checkins on a map. You can find this on the Friends tab,
           menu -> more -> Map.</li>
+      <li>Add Friends screen now has an option to find Facebook friends already on Foursquare.</li>
     </ul>
   
     <h4><span>What's new in v2010-06-16</span></h4>
