Some layout teaks for map callout, upped version # and changelog.

--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -38,11 +38,14 @@
   
   <body>
   
-    <h4><span>What's new in v2010-06-24?</span></h4>
+    <h4><span>What's new in v2010-06-28?</span></h4>
     <ul>
       <li>Showing recent nearby friend checkins on a map. You can find this on the Friends tab,
-          menu -> more -> Map.</li>
-      <li>Add Friends screen now has an option to find Facebook friends already on Foursquare.</li>
+          Menu -> More -> Map.</li>
+      <li>Add Friends screen now has an option to find Facebook friends that are also using Foursquare.
+          NOTE: There's a render bug in Android for the Facebook login page which makes the username
+          and password fields misalign when the virtual keypad is displayed, this should be fixed in
+          Android Froyo.</li>
     </ul>
   
     <h4><span>What's new in v2010-06-16</span></h4>
