--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -38,7 +38,15 @@
   
   <body>
   
-    <h4><span>What's new in v2010-06-28?</span></h4>
+    <h4><span>What's new in v2010-07-xx?</span></h4>
+    <ul>
+      <li>Friend requests screen now has an input filter at top, should make it easier to locate specific
+          friend requests by name.</li>
+      <li>Places list items now have a 'special' icon when the venue is offering a special. Also now showing
+          a person icon when the venue is trending.</li>
+    </ul>
+    
+    <h4><span>What's new in v2010-06-28</span></h4>
     <ul>
       <li>Showing recent nearby friend checkins on a map. You can find this on the Friends tab,
           Menu -> More -> Map.</li>
