--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -44,6 +44,7 @@
           friend requests by name.</li>
       <li>Places list items now have a 'special' icon when the venue is offering a special. Also now showing
           a person icon when the venue is trending.</li>
+      <li>Added last n system logs messages to feedback emails to help diagnose application errors.</li>
     </ul>
     
     <h4><span>What's new in v2010-06-28</span></h4>
