Upped version number to correct date.

--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -38,7 +38,7 @@
   
   <body>
   
-    <h4><span>What's new in v2010-07-xx?</span></h4>
+    <h4><span>What's new in v2010-07-09?</span></h4>
     <ul>
       <li>Friend requests screen now has an input filter at top, should make it easier to locate specific
           friend requests by name.</li>
