--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -38,12 +38,13 @@
   
   <body>
   
-    <h4><span>What's new in v2010-07-09?</span></h4>
+    <h4><span>What's new in v2010-07-12?</span></h4>
     <ul>
       <li>Friend requests screen now has an input filter at top, should make it easier to locate specific
           friend requests by name.</li>
       <li>Places list items now have a 'special' icon when the venue is offering a special. Also now showing
           a person icon when the venue is trending.</li>
+      <li>High res category icons being used now.</li>
       <li>Added last n system logs messages to feedback emails to help diagnose application errors.</li>
     </ul>
     
