--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -38,7 +38,13 @@
   
   <body>
   
-    <h4><span>What's new in v2010-07-12?</span></h4>
+    <h4><span>What's new in v2010-07-13?</span></h4>
+    <ul>
+      <li>Bug fix for new category icons (from 2010-07-12 version) which could cause a force-close on the
+          Places tab.</li>
+    </ul>
+    
+    <h4><span>What's new in v2010-07-12</span></h4>
     <ul>
       <li>Friend requests screen now has an input filter at top, should make it easier to locate specific
           friend requests by name.</li>
