When user clicks their own photo in the Me tab, give them a chance to pick a new photo for themselves from the photo gallery. Also upped the connection timeout from 10 to 60 seconds.....

--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -38,6 +38,11 @@
   
   <body>
   
+    <h4><span>What's new in v2010-07-31?</span></h4>
+    <ul>
+      <li>Click your user photo in the 'Me' tab to set a new photo for yourself.</li>
+    </ul>
+    
     <h4><span>What's new in v2010-07-13?</span></h4>
     <ul>
       <li>Bug fix for new category icons (from 2010-07-12 version) which could cause a force-close on the
