--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -41,6 +41,10 @@
     <h4><span>What's new in v2010-07-31?</span></h4>
     <ul>
       <li>Click your user photo in the 'Me' tab to set a new photo for yourself.</li>
+      <li>Added an option in preferences to use a foursquare image viewer to view user photos instead
+          of your device's native image viewer (still default). Some devices have image viewers that
+          don't perform well, so you can *un-check* the option named "Image Viewing" in the preferences
+          screen to turn on our own viewer. </li>
     </ul>
     
     <h4><span>What's new in v2010-07-13?</span></h4>
