--- a/main/assets/changelog-en.html
+++ b/main/assets/changelog-en.html
@@ -40,7 +40,7 @@
   
     <h4><span>What's new in v2010-08-31?</span></h4>
     <ul>
-      <li>Option for install to SD card (Android 2.2 and above users)</li>
+      <li>Option for install to SD card (Android 2.2 and above required)</li>
       <li>Added profile settings information to Preferences page. This is a convenience to let
           users see what email address and name they're using with their Foursquare account.</li>
     </ul>
